--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/AurlinD/iss_spotter#readme",
   "dependencies": {
     "request": "^2.88.2",
+    "request-promise-native": "^1.0.8",
     "require": "^2.4.20"
   }
 }
